Add a link to listen to the stream.

--- a/static/login.html
+++ b/static/login.html
@@ -2,6 +2,7 @@
   <head>
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" type="text/css" href="/js/ext/jquery.mobile-1.4.3.css" />
+  <link rel="stylesheet" type="text/css" href="/css/style.css" />
   <script src="/js/ext/jquery-1.11.1.js"></script>
   <script src="/js/ext/jquery.mobile-1.4.3.js"></script>
   </head>
